RESOLVED FIXED176849
[Win] DRT option --gc-between-tests is not implemented.
https://bugs.webkit.org/show_bug.cgi?id=176849
Summary [Win] DRT option --gc-between-tests is not implemented.
Per Arne Vollan
Reported 2017-09-13 09:49:46 PDT
This option will force GC to run after each test.
Attachments
Patch (2.30 KB, patch)
2017-09-13 09:54 PDT, Per Arne Vollan
no flags
Per Arne Vollan
Comment 1 2017-09-13 09:54:09 PDT
Per Arne Vollan
Comment 2 2017-09-13 10:17:13 PDT
Comment on attachment 320650 [details] Patch Thanks for reviewing!
Radar WebKit Bug Importer
Comment 3 2017-09-13 10:17:59 PDT
Radar WebKit Bug Importer
Comment 4 2017-09-13 10:18:00 PDT
WebKit Commit Bot
Comment 5 2017-09-13 10:46:05 PDT
Comment on attachment 320650 [details] Patch Clearing flags on attachment: 320650 Committed r221975: <http://trac.webkit.org/changeset/221975>
WebKit Commit Bot
Comment 6 2017-09-13 10:46:07 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.