[Win] DRT option --gc-between-tests is not implemented. https://bugs.webkit.org/show_bug.cgi?id=176849

Reviewed by Brent Fulgham.

Perform GC after the test if this option is enabled. This patch also set the initial value of the flag
to true, in order to catch GC related issues in the test in which they occur.

* DumpRenderTree/win/DumpRenderTree.cpp:
(runTest):


Canonical link: https://commits.webkit.org/193310@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221975 268f45cc-cd09-0410-ab3c-d52691b4dbfc